# soap-service

./: .gitignore  CLAUDE.md  Cargo.toml  soap_test_examples.md  test_soap.sh
docs/: IMPLEMENTATION_PLAN.md
examples/calculator/: Cargo.toml
examples/calculator/src/: main.rs  multiplication_example.rs
examples/concatenation-service/: Cargo.toml
examples/concatenation-service/src/: main.rs
src/: lib.rs
src/codegen/: handlers.rs  mod.rs  router.rs  wsdl.rs
src/parser/: attributes.rs  functions.rs  mod.rs  types.rs
src/schema/: mod.rs  templates.rs  types.rs
src/soap/: envelope.rs  faults.rs  mod.rs  serialization.rs
