[package]
name = "concatenation-service"
version = "0.1.0"
edition = "2021"

[dependencies]
soap-service = { path = "../.." }
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.6"
quick-xml = { version = "0.31", features = ["serialize"] }